<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <!-- Logo -->
    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:textStyle="bold"/>

    <!-- Judul -->
    <TextView
        android:id="@+id/title"
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h1_landing"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <!-- Subjudul -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_below="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h2_landing"
        android:textColor="#D0D0FF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <!-- Deskripsi -->
    <TextView
        android:id="@+id/description"
        android:layout_below="@id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_landing"
        android:textColor="#CCCCCC"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textAlignment="center"/>

    <!-- Tombol -->
    <Button
        android:id="@+id/startButton"
        android:layout_below="@id/description"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start_btn"
        android:background="@drawable/button_background"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"/>

    <!-- Gambar roda -->
    <ImageView
        android:id="@+id/bikeWheel"
        android:layout_width="336dp"
        android:layout_height="330dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-77dp"
        android:layout_marginBottom="-16dp"
        android:contentDescription="no"
        android:src="@drawable/bike"
        tools:ignore="HardcodedText" />
</RelativeLayout>
